# qualitara-fleet-telemetry

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 32ce1feafe38_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/core/: anomaly.py  exception_handlers.py  logging_config.py  zones.py
backend/app/middleware/: request_logging.py
backend/app/models/: __init__.py  anomaly.py  telemetry.py  vehicle.py  zone.py
backend/app/repositories/: anomaly_repository.py  telemetry_repository.py  vehicle_repository.py  zone_repository.py
backend/app/routers/: anomaly.py  fleet.py  telemetry.py  vehicle.py
backend/app/schemas/: anomaly.py  fleet.py  telemetry.py  vehicle.py
backend/app/services/: anomaly.py  fleet.py  telemetry.py  vehicle.py
backend/scripts/: simulate_fleet.py
backend/tests/: conftest.py  helpers.py
backend/tests/integration/: test_anomaly_query.py  test_fault_transition.py  test_fleet_endpoints.py  test_observability.py  test_telemetry_ingest.py  test_validation.py
backend/tests/unit/: test_anomaly_rules.py
docs/: ADR.md  AI_INTERACTION_LOG.md
frontend/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
load-test/: locustfile.py
prometheus/: alerts.yml  prometheus.yml
(+86 files in other folders)
